# syengine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  Report20181026-1510.vspx  Report20181103-1434.vspx  Report20190216-1950.vspx  SYEngine.sln  WeSp3D.sln  doxygen.cfg  gen_docs  include_dirs_vs.txt
SYEngine/: CMakeLists.txt  SYEngine.filters  SYEngine.vcxproj  SYEngine.vcxproj.filters  imgui.ini  main.cpp
SYEngine/Diagnostics/: Logger.cpp  Logger.h  TEST_main.h  memory_diagnostics.h
SYEngine/Engine/: Engine.cpp  Engine.h
SYEngine/Engine/Core/: BaseEngine.cpp  BaseEngine.h  BaseModule.cpp  BaseModule.h  CommonValues.h  EngineContext.cpp  EngineContext.h  GameContext.cpp  GameContext.h  Instance.h  MathLibrary.cpp  MathLibrary.h  SceneContext.cpp  SceneContext.h  config_components.h  config_engine.h  config_world.h  typedefs.h
SYEngine/Engine/Core/Abstract/: IComponentState.cpp  IComponentState.h  IComponentsInterface.cpp  IComponentsInterface.h  IEngineContextInterface.cpp  IEngineContextInterface.h  IErrorLogging.cpp  IErrorLogging.h  IGuidCounted.cpp  IGuidCounted.h  IModule.h  IModuleState.cpp  IModuleState.h  ISceneContextInterface.cpp  ISceneContextInterface.h  IUncopyable.h  IUsesEngineAPI.cpp  IUsesEngineAPI.h  IUsesEngineApi.cpp  IUsesEngineApi.h
SYEngine/Engine/Core/Common/: EngineError.cpp  EngineError.h  TimeManager.cpp  TimeManager.h  common.h
SYEngine/Engine/EngineAPI/: Command.cpp  Command.h  EngineAPI.cpp  EngineAPI.h  EngineApi.cpp  export.h
SYEngine/Engine/InputManager/: InputManager.cpp  InputManager.h  KeyboardManager.cpp  KeyboardManager.h  MouseManager.cpp  MouseManager.h
SYEngine/Engine/LogicManager/: LogicManager.cpp  LogicManager.h
SYEngine/Engine/LogicManager/AIManager/: AiManager.cpp  AiManager.h
SYEngine/Engine/LogicManager/ScriptManager/: ScriptManager.cpp  ScriptManager.h
SYEngine/Engine/NetworkManager/: NetworkManager.cpp  NetworkManager.h
SYEngine/Engine/OutputManager/: OutputManager.cpp  OutputManager.h  Window.cpp  Window.h
SYEngine/Engine/OutputManager/AudioManager/: AudioManager.cpp  AudioManager.h  MusicManager.cpp  MusicManager.h  SoundManager.cpp  SoundManager.h
SYEngine/Engine/OutputManager/RenderingManager/: PhysicsDebugRenderer.cpp  PhysicsDebugRenderer.h  RenderingManager.cpp  RenderingManager.h  ShaderManager.cpp  ShaderManager.h
SYEngine/Engine/OutputManager/RenderingManager/ShaderManager/: ShaderManager.cpp  ShaderManager.h
SYEngine/Engine/OutputManager/RenderingManager/ShaderManager/Shader/: Shader.cpp  Shader.h
SYEngine/Engine/OutputManager/RenderingManager/ShadowManager/: ShadowManager.cpp  ShadowManager.h
SYEngine/Engine/OutputManager/RenderingManager/ShadowManager/Shadow/: OmniShadowMap.cpp  OmniShadowMap.h  Shadow.cpp  Shadow.h  ShadowMap.cpp  ShadowMap.h
SYEngine/Engine/OutputManager/RenderingManager/UiManager/: UiManager.cpp  UiManager.h
SYEngine/Engine/OutputManager/RenderingManager/UiManager/Ui/: ImGuiOpenGlWrapper.cpp  ImGuiOpenGlWrapper.h  ImGuiWrapper.cpp  ImGuiWrapper.h  Ui.cpp  Ui.h
SYEngine/Engine/OutputManager/RenderingManager/WindowManager/: WindowManager.cpp  WindowManager.h
SYEngine/Engine/SceneManager/: SceneManager.cpp  SceneManager.h
SYEngine/Engine/SceneManager/EntityManager/: EntityManager.cpp  EntityManager.h
SYEngine/Engine/SceneManager/EntityManager/ComponentManager/: ComponentManager.cpp  ComponentManager.h
SYEngine/Engine/SceneManager/EntityManager/ComponentManager/Component/: Camera.cpp  Camera.h  Camera_.cpp  Camera_.h  Component.cpp  Component.h  Transform.cpp  Transform.h
SYEngine/Engine/SceneManager/EntityManager/ComponentManager/Component/AI/: AI.h
SYEngine/Engine/SceneManager/EntityManager/ComponentManager/Component/Camera/: Camera_.cpp  Camera_.h
SYEngine/Engine/SceneManager/EntityManager/ComponentManager/ControllerManager/: ControllerManager.cpp  ControllerManager.h
SYEngine/Engine/SceneManager/EntityManager/ComponentManager/MaterialManager/: MaterialManager.cpp  MaterialManager.h
SYEngine/Engine/SceneManager/EntityManager/ComponentManager/MeshManager/: MeshGenerator.cpp  MeshGenerator.h  MeshManager.cpp  MeshManager.h
SYEngine/Engine/SceneManager/EntityManager/ComponentManager/ModelManager/: ModelManager.cpp  ModelManager.h
SYEngine/Engine/SceneManager/EntityManager/ComponentManager/SkyboxManager/: SkyboxManager.cpp  SkyboxManager.h
SYEngine/Engine/SceneManager/EntityManager/ComponentManager/TextureManager/: TextureManager.cpp  TextureManager.h
SYEngine/Engine/SceneManager/EntityManager/Entity/: Entity.cpp  Entity.h
SYEngine/Engine/SceneManager/EntityManager/Entity/WorldEntity/: WorldEntity.cpp  WorldEntity.h
SYEngine/Engine/SceneManager/Scene/: Scene.cpp  Scene.h
SYEngine/Engine/SimulationManager/: SimulationManager.cpp  SimulationManager.h
SYEngine/Engine/SimulationManager/AnimationManager/: AnimationManager.cpp  AnimationManager.h
SYEngine/Engine/SimulationManager/PhysicsManager/: MotionState.cpp  MotionState.h  PhysicsEntity.cpp  PhysicsEntity.h  PhysicsManager.cpp  PhysicsManager.h  PhysicsScene.cpp  PhysicsScene.h
SYEngine/Engine/SimulationManager/PhysicsManager/bullet3parts/: CommonGraphicsAppInterface.h  CommonRigidBodyBase.h
SYEngine/Game/scripts/: BallController.h  LeftPaddleController.h  RightPaddleController.h  _SceneBuilder.h  game_script_includes.h
SYEngine/Helper/: Utils.h  macros.h
SYEngine/scripts/: BallController.h  FirstPersonCameraController.h  GeneralInputHandler.h  LookAtQuad.h  _SceneBuilder.h  _SceneBuilderBase.h  generic_script_includes.h  script_includes.h
SYEngine/shaders/: directional_shadow_map.frag  directional_shadow_map.vert  line_shader.frag  line_shader.vert  omni_shadow_map.frag  shader_animate.frag  shader_plain.frag  shader_plain.vert  standard.frag  standard.vert  standard_sm_ortho.frag  standard_sm_ortho.vert  standard_sm_perspective.frag  standard_sm_perspective.geom  standard_sm_perspective.vert
SYEngine/shaders/example/: forward-ambient.fs  forward-directional.fs  forward-point.fs  forward-point.vs  forward-spot.fs
SYEngineLib/: SYEngineLib.cpp  (+3 more)
(+3032 files in other folders)
